# creditagricole-particuliers

./: README.md  pyproject.toml
.github/workflows/: pypipublish.yml
creditagricole_particuliers/: README.md  __init__.py  accounts.py  authenticator.py  cards.py  iban.py  logout.py  mockconfig.py  operations.py  regionalbanks.py
docs/: EXAMPLES.md  LIBRARY_REFERENCE.md
examples/: README.md  _utils.py  account_operations_example.py  accounts_example.py  cards_example.py  regional_banks_example.py  search_example.py  standard_example.py
mocks/: README.md  account-1-0_operations_mock.json  account-3-1_operations_mock.json  accounts-1_mock.json  accounts-3_mock.json  authentication_keypad_mock.json  authentication_security_mock.json  card-0_operations_mock.json  card-1_operations_mock.json  cards_mock.json  regionalbank-75_mock.json
samples/: README.md  create_samples.py
samples/data/: account_12345678901.json  account_12345678901_operations.json  account_96019293626_operations.json  account_98765432109.json  account_98765432109_operations.json  accounts.json  card_1098.json  card_1098_operations.json  card_9012.json  card_9012_operations.json  cards.json  regionalBank_57.json  regionalBank_75.json
samples/types/: account_00000000000_operations_types.json  account_types.json  accounts_types.json  card_0000_operations_types.json  card_0000_types.json  cards_types.json  operation_card_types.json  operation_types.json  regionalBank_types.json
