[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "creditagricole_particuliers"
dynamic = ["version"]
authors = [
    {name = "Denis MACHARD", email = "d.machard@gmail.com"},
]
description = "Python client pour la banque Crédit Agricole"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
keywords = ["credit", "agricole", "api", "banking", "banque"]
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/dmachard/creditagricole-particuliers"

[tool.setuptools]
packages = ["creditagricole_particuliers"]
include-package-data = true

[tool.setuptools.data-files]
"creditagricole_particuliers" = ["creditagricole_particuliers/aliases.json"]

[tool.setuptools.dynamic]
version = {attr = "creditagricole_particuliers.__version__"} 